# Ragent-Python

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  celery_app.py  config.py  db.py  main.py  migrate.py  models.py  security.py  tasks.py  utils.py
app/api/: auth.py  chat.py  conversation.py  dashboard.py  eval.py  feedback.py  health.py  ingestion.py  intent.py  knowledge.py  mapping.py  sample.py  trace.py  user.py
app/core/: __init__.py  cancel.py  chunk.py  guidance.py  intent.py  mcp.py  memory.py  ratelimit.py  retrieve.py  rewrite.py  schedule.py  terms.py  types.py
app/evaluation/: __init__.py  __main__.py  dataset.py  eval_set.json  report.py  runner.py  score.py
app/graph/: __init__.py  pipeline.py
app/infra/: __init__.py  breaker.py  clients.py  redis.py  router.py  storage.py
app/services/: ingest.py  pipeline_exec.py
deploy/sql/: schema.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/hooks/: useStreamChat.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  IngestionPage.tsx  IntentPage.tsx  KnowledgePage.tsx  LoginPage.tsx  MappingPage.tsx  SamplePage.tsx  TracePage.tsx  UsersPage.tsx
frontend/src/stores/: auth.ts
mcp_server/: server.py
