[project]
name = "ragent-py"
version = "0.1.0"
description = "Ragent Python 全栈复刻 — FastAPI + LangGraph RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "redis>=5.2",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "jieba>=0.42",
    "numpy>=2.0",
    "langgraph>=0.2.40",
    "langchain-core>=0.3",
    "pymupdf>=1.24",
    "python-jose[cryptography]>=3.3",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]
# 评测重依赖单独成组：uv sync --group eval
eval = ["ragas>=0.2.8", "datasets>=3.0", "langchain-openai>=0.2"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
